--- a/ToDoList.html
+++ b/ToDoList.html
@@ -9,6 +9,26 @@
         <script src='base.js'></script>
     </head>
     <body>
+
+        <div id="SettingPage">
+            <h2>Setting</h2>
+            <div class="FormGP">
+                <label for="SaveLocation">Default Save Location:</label>
+                <select id="SaveLocation">
+                    <option value="Local">Local</option>
+                    <option value="Server">Server</option>
+                </select>
+            </div>
+            <div class="FormGroup">
+                <label for="DefaultInterval">Default Duration (Days)</label>
+                <input id="DefaultInterval" type="number" min="0" placeholder="" />
+            </div>
+            <div class="ButtonGroup">
+                <button id="CancelSettings">Cancel</button>
+                <button id="SaveSettings">Save Setting</button>
+            </div>
+        </div>
+
         <div id="Main">
             
             <div id="Controls">
@@ -65,6 +85,7 @@
                     Title Title TEst TEst
                     Title Title TEst TEst
                 </span>
+                <input class="TaskCheckBox" name="TaskCheckBox" type="checkbox">
                 <button class="TaskInfoButton">
                     Info/Edit
                 </button>
@@ -82,6 +103,7 @@
                     Title Title TEst TEst
                     Title Title TEst TEst
                 </span>
+                <input class="TaskCheckBox" name="TaskCheckBox" type="checkbox">
                 <button class="TaskInfoButton">
                     Info/Edit
                 </button>
